Fixed US23 Q3 to be more clear. Removed redundant code from NepotismDetector.java